[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/UI/singleView.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Menus/MainMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Control.gd" type="Script" id=3]
[ext_resource path="res://scenes/Levels/World.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/normalCamera.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/cRT_Filter.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Orbs/OrbCase.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Menus/pauseMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Levels/superMarioBros.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/UI/timer.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/UI/multiView.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/UI/jumpGuage.tscn" type="PackedScene" id=12]
[ext_resource path="res://audio/music/e-flat-arpeggio.wav" type="AudioStream" id=13]
[ext_resource path="res://scenes/UI/abilityIcon.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/Levels/overWorld.tscn" type="PackedScene" id=18]
[ext_resource path="res://sprites/loading.png" type="Texture" id=19]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform float colors : hint_range(1.0, 32.0);
uniform float dither : hint_range(0.0, 0.5);

void fragment()
{
	vec4 color = texture(TEXTURE, UV);
	
	float a = floor(mod(UV.x / TEXTURE_PIXEL_SIZE.x, 2.0));
	float b = floor(mod(UV.y / TEXTURE_PIXEL_SIZE.y, 2.0));	
	float c = mod(a + b, 2.0);
	
	COLOR.r = (round(color.r * colors + dither) / colors) * c;
	COLOR.g = (round(color.g * colors + dither) / colors) * c;
	COLOR.b = (round(color.b * colors + dither) / colors) * c;
	c = 1.0 - c;
	COLOR.r += (round(color.r * colors - dither) / colors) * c;
	COLOR.g += (round(color.g * colors - dither) / colors) * c;
	COLOR.b += (round(color.b * colors - dither) / colors) * c;
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/colors = 24.0
shader_param/dither = 0.15

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
script = ExtResource( 3 )
music = NodePath("audio/music")
single = NodePath("singleView")
mainMenu = NodePath("singleView/view/mainMenu")
pauseMenu = NodePath("singleView/UI/pauseMenu")
pauseButtons = NodePath("singleView/UI/pauseMenu/pauseButtons")
loading = NodePath("loadingScreen")
crt = NodePath("cRT_Filter")
multi = ExtResource( 11 )
overWorld = ExtResource( 18 )
levelOne = ExtResource( 4 )
marioWorld = ExtResource( 9 )
HUD = NodePath("singleView/UI/HUD")

[node name="singleView" parent="." instance=ExtResource( 1 )]
pause_mode = 1
material = SubResource( 4 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0

[node name="view" parent="singleView" index="0"]
size = Vector2( 256, 240 )

[node name="mainMenu" parent="singleView/view" index="0" instance=ExtResource( 2 )]

[node name="normalCamera" parent="singleView/view" index="1" instance=ExtResource( 5 )]
zoom = Vector2( 1, 1 )

[node name="UI" type="Node2D" parent="singleView"]

[node name="pauseMenu" parent="singleView/UI" instance=ExtResource( 8 )]
position = Vector2( 126, -138 )

[node name="HUD" type="Node2D" parent="singleView/UI"]

[node name="OrbCase" parent="singleView/UI/HUD" instance=ExtResource( 7 )]
position = Vector2( 26, 26 )

[node name="jumpGauge" parent="singleView/UI/HUD" instance=ExtResource( 12 )]
position = Vector2( 26, 56 )

[node name="abilityIcon" parent="singleView/UI/HUD" instance=ExtResource( 17 )]
position = Vector2( 119, 32 )

[node name="timer" parent="singleView/UI/HUD" instance=ExtResource( 10 )]

[node name="audio" type="Node" parent="."]

[node name="music" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource( 13 )
volume_db = -17.68
pitch_scale = 0.84
bus = "Music"

[node name="sfx" type="AudioStreamPlayer" parent="audio"]

[node name="loadingScreen" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 19 )

[node name="cRT_Filter" parent="." instance=ExtResource( 6 )]
__meta__ = {
"_edit_lock_": true
}

[editable path="singleView"]
